# vorlagellm

./: .coveragerc  LICENSE  README.rst  pyproject.toml
.github/workflows/: docs.yml  testing.yml
docs/: api.rst  cli.rst  conf.py  index.rst  pipeline.rst
tests/: test_agreements.py  test_chains.py  test_comparison.py  test_languages.py  test_main.py  test_prompts.py  test_rag.py  test_tei.py
tests/test-data/: 07_VL51_P279v.xml  sblgnt-apparatus-1Cor1.xml
vorlagellm/: agreements.py  chains.py  comparison.py  ensemble.py  languages.py  llms.py  main.py  prompts.py  rag.py  tei.py
