[tool.poetry]
name = "VorlageLLM"
version = "0.1.0"
description = "Uses an LLM to determine which were plausible readings in the Vorlage of a translation of a text."
authors = ["Robert Turnbull <robert.turnbull@unimelb.edu.au>"]
license = "Apache-2.0"
readme = "README.rst"
repository = "https://github.com/rbturnbull/vorlagellm/"
documentation = "https://rbturnbull.github.io/vorlagellm"
homepage = "https://github.com/rbturnbull/vorlagellm/"
keywords = ["llm"]
# For classifiers see https://pypi.org/classifiers/
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.poetry.dependencies]
python = "<4.0,>=3.10"
docutils = "!=0.21.post1"
langchain = "^0.1.17"
lxml = "^5.2.1"
openai = "^1.25.1"
langchain-community = "^0.0.36"
langchain-openai = "^0.1.6"
rich = "^13.7.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ipykernel = "^6.6.1"
coverage = "^5.5"
autopep8 = "^1.5.7"
Sphinx = ">=5.0"
nbsphinx = "^0.8.7"
sphinx-rtd-theme = "^1.0.0"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.15.0"
sphinx-copybutton = "^0.4.0"
black = "^21.10b0"
sphinx-click = {git = "https://github.com/rbturnbull/sphinx-click.git"}


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vorlagellm = "vorlagellm.main:app"
